simplify and clarify home page

--- a/index.mdwn
+++ b/index.mdwn
@@ -1,8 +1,8 @@
 [[!meta title="wiki.greptilian.com"]]
 
-You can read [[about]] this wiki or check its [[sitemap]].  There's not a lot of content yet, though I am taking a few notes about [[ubuntu]].
+See the [[sitemap]] for what's here.
 
-http://greptilian.com has additional content.
+http://greptilian.com has more about me.
 
 You might also be interested in some of these:
 
